[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "github_bot"
author = "Andrew Svetlov"
author-email = "andrew.svetlov@gmail.com"
dist-name="github-bot"
home-page = "https://github.com/aio-libs/github-bot"
description-file="README.rst"
requires=["aiohttp >= 3.1.0",
          "gidgethub[aiohttp] >= 2.4.1",
	  "cachetools >= 2.0.0"]
requires-python=">=3.6"
classifiers = ["License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
]

